--- a/TSA Software Development 2025/templates/index.html
+++ b/TSA Software Development 2025/templates/index.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Home - Career App{% endblock %}
+{% block title %}Home - GreenHub{% endblock %}
 
 {% block content %}
 <div class="hero">
-  <h2>Welcome to the Career App</h2>
+  <h2>Welcome to GreenHub</h2>
   <p>
-    This platform helps you generate professional emails, resumes, 
-    cover letters, and more. Navigate through the top menu to explore.
+    This platform helps you find jobs in Agriculture and the Environment. Navigate through the top menu to explore.
   </p>
 </div>
 {% endblock %}
